adminConsole - Fixed mobile navigation overlapping pagination

--- a/style/sass/adminConsole.scss
+++ b/style/sass/adminConsole.scss
@@ -64,7 +64,7 @@
     //News Section
     #news {
         font-family: $lighterFont;
-        padding: pxToRem(40) pxToRem(15) pxToRem(70) pxToRem(15);
+        padding: pxToRem(40) pxToRem(15) pxToRem(130) pxToRem(15);
     }
     
     //Search bar input
